--- a/css/bootstrap-theme-custom.css
+++ b/css/bootstrap-theme-custom.css
@@ -70,3 +70,9 @@ fieldset[disabled] .btn-primary.active {
 .tab-content, #fh-refset_canvas-mainPanel > div {
     width: 99%;
 }
+
+.custom-flagbox {
+    padding: 0px 5px;
+    background-color: white;
+    border-radius: 5px;
+}
